--- a/GoogleSampleModules/GCamera/src/main/res/values/styles.xml
+++ b/GoogleSampleModules/GCamera/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="StyleMain" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@color/trans</item>
+        <item name="android:windowDisablePreview">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 </resources>
