--- a/AppModules/NetworkDebugger/src/main/res/layout/activity_main.xml
+++ b/AppModules/NetworkDebugger/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
             android:textSize="18sp" />
     </android.support.v7.widget.Toolbar>
 
-    <com.example.ndebuger.MyScrollView
+    <com.example.ndebuger.widget.MyScrollView
         android:id="@+id/sv_parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -159,7 +159,7 @@
                     </LinearLayout>
                 </ScrollView>
 
-                <com.example.ndebuger.ScrollEditText
+                <com.example.ndebuger.widget.ScrollEditText
                     android:id="@+id/et_msg_send"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -293,6 +293,6 @@
                 </LinearLayout>
             </ScrollView>
         </LinearLayout>
-    </com.example.ndebuger.MyScrollView>
+    </com.example.ndebuger.widget.MyScrollView>
 
 </LinearLayout>
