--- a/GoogleSampleModules/GCamera/src/main/res/layout/activity_main.xml
+++ b/GoogleSampleModules/GCamera/src/main/res/layout/activity_main.xml
@@ -8,13 +8,22 @@
         android:background="@color/wheat"
         tools:context="com.example.gcamera.MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_margin="10dp"
+                android:layout_height="match_parent">
+
+            <Button
+                    android:layout_width="match_parent"
+                    android:id="@+id/btn_jcamera_view"
+                    android:text="JCameraView"
+                    android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
