--- a/GoogleSampleModules/GCamera/src/main/res/layout/layout_google_camera_view2.xml
+++ b/GoogleSampleModules/GCamera/src/main/res/layout/layout_google_camera_view2.xml
@@ -6,46 +6,76 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/cadetblue"
+        android:background="@color/black"
         tools:context=".MainActivity">
 
     <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="48dp"
             />
 
     <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
         <com.google.android.cameraview.CameraView
                 android:id="@+id/camera"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
                 android:adjustViewBounds="true"
                 android:background="@android:color/black"/>
 
-        <RelativeLayout
+        <LinearLayout
                 android:layout_width="match_parent"
+                android:orientation="vertical"
                 android:layout_height="match_parent">
 
-            <ImageView
-                    android:id="@+id/imageview"
-                    android:layout_width="150dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_height="150dp"/>
-        </RelativeLayout>
+
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/shadow"/>
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                <View
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/shadow"
+                        android:layout_height="match_parent"/>
+
+                <RelativeLayout
+                        android:layout_width="150dp"
+                        android:background="@drawable/qr_code_bg"
+                        android:layout_gravity="center"
+                        android:layout_height="150dp"/>
+
+                <View
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/shadow"
+                        android:layout_height="match_parent"/>
+            </LinearLayout>
+
+            <View
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/shadow"/>
+        </LinearLayout>
+
     </FrameLayout>
 
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:gravity="center"
+            android:background="@color/ad_tr"
             android:layout_height="0dp">
 
         <android.support.design.widget.FloatingActionButton
@@ -53,6 +83,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@drawable/ic_camera"
+                android:layout_centerInParent="true"
                 app:useCompatPadding="true"
                 tools:ignore="VectorDrawableCompat"/>
     </RelativeLayout>
