--- a/AppModules/KuaiChuan/src/main/res/layout/activity_home.xml
+++ b/AppModules/KuaiChuan/src/main/res/layout/activity_home.xml
@@ -16,6 +16,7 @@
     <android.support.design.widget.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:id="@+id/navigation_view"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_home"
