--- a/AppModules/KuaiChuan/src/main/res/layout/layout_common_tool_bar.xml
+++ b/AppModules/KuaiChuan/src/main/res/layout/layout_common_tool_bar.xml
@@ -7,12 +7,12 @@
     android:background="@color/colorPrimary">
 
     <RelativeLayout
+        android:id="@+id/rl_hoem_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:background="@drawable/selector_avtor_view">
+        android:layout_margin="8dp">
 
         <ImageView
             android:layout_width="18dp"
