--- a/AppModules/KuaiChuan/src/main/res/menu/activity_home_drawer.xml
+++ b/AppModules/KuaiChuan/src/main/res/menu/activity_home_drawer.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="电脑传" />
-    <item android:title="网页传" />
-    <item android:title="帮助与反馈" />
-    <item android:title="更新版本" />
-    <item android:title="关于作者" />
+    <item
+        android:id="@+id/menu_action_trans_by_pc"
+        android:title="电脑传" />
+    <item
+        android:id="@+id/menu_action_trans_by_web"
+        android:title="网页传" />
+    <item
+        android:id="@+id/menu_action_help_feedback"
+        android:title="帮助与反馈" />
+    <item
+        android:id="@+id/menu_action_update_app"
+        android:title="更新版本" />
+    <item
+        android:id="@+id/menu_action_about_author"
+        android:title="关于作者" />
 </menu>
