--- a/AppModules/KuaiChuan/src/main/res/values/styles.xml
+++ b/AppModules/KuaiChuan/src/main/res/values/styles.xml
@@ -29,5 +29,20 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="style_container_main_menu">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/selector_menu_item_main</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">5dp</item>
+    </style>
+
+    <style name="style_icon_main_menu">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerHorizontal">true</item>
+    </style>
+
     <string name="str_name">名称</string>
 </resources>
