--- a/ViewModules/RecyclerViewDemo/src/main/res/values/colors.xml
+++ b/ViewModules/RecyclerViewDemo/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="window_background">#FFF5F5F5</color>
+
+
+    <color name="item_pressed_color">#CCCCCC</color>
+    <color name="item_activated_color">#77CEEE</color>
 </resources>
