--- a/ViewModules/RecyclerViewDemo/src/main/res/layout/activity_basic_use_recycler_viewpager.xml
+++ b/ViewModules/RecyclerViewDemo/src/main/res/layout/activity_basic_use_recycler_viewpager.xml
@@ -8,6 +8,7 @@
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
         android:clipToPadding="false"
         android:paddingLeft="30dp"
