--- a/AppModules/KuaiChuan/src/main/res/layout/activity_main.xml
+++ b/AppModules/KuaiChuan/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.zykc.MainActivity">
+    tools:context="com.example.zykc.ui.activity.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         style="@style/AppTheme.AppBarOverlay"
