--- a/ViewModules/RecyclerViewDemo/src/main/res/layout/activity_main.xml
+++ b/ViewModules/RecyclerViewDemo/src/main/res/layout/activity_main.xml
@@ -1,31 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.rcv.MainActivity">
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context="com.example.rcv.ui.activity.MainActivity">
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="10dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="10dp">
 
             <Button
-                android:id="@+id/btn_main_basic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="基本使用" />
+                    android:id="@+id/btn_main_basic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="基本使用"/>
 
             <Button
-                android:id="@+id/btn_main_adv"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="高级使用" />
+                    android:id="@+id/btn_main_adv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="高级使用"/>
+
+            <Button
+                    android:id="@+id/btn_main_fjnestedhovertab"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="FJNestedHoverTabDemo"/>
+
+            <Button
+                    android:id="@+id/btn_main_fjedittextcount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="FJEditTextCount"/>
 
 
         </LinearLayout>
