--- a/AppModules/FileTransferAssistant/src/main/res/layout/activity_main.xml
+++ b/AppModules/FileTransferAssistant/src/main/res/layout/activity_main.xml
@@ -104,6 +104,7 @@
             </RadioGroup>
 
             <Button
+                    android:id="@+id/btn_create_or_open"
                     android:layout_width="match_parent"
                     android:text="打开 or 连接"
                     android:layout_marginTop="5dp"
