--- a/ToolAppModule/FileTransferAssistant/src/main/res/layout/activity_ftp_file_list.xml
+++ b/ToolAppModule/FileTransferAssistant/src/main/res/layout/activity_ftp_file_list.xml
@@ -1,7 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+        android:orientation="vertical"
         android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize">
+
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:elevation="0dp"
+                android:layout_height="wrap_content">
+
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <TextView
+                        android:id="@+id/tv_reback"
+                        android:layout_width="wrap_content"
+                        android:textSize="16sp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:textColor="@color/white"
+                        android:text="取消"
+                        android:layout_height="wrap_content"/>
+
+                <TextView
+                        android:id="@+id/tv_filelist"
+                        android:layout_width="wrap_content"
+                        android:text="Ftp文件列表"
+                        android:textColor="@color/white"
+                        android:layout_centerVertical="true"
+                        android:layout_centerInParent="true"
+                        android:textSize="18sp"
+                        android:layout_height="wrap_content"/>
+
+                <TextView
+                        android:id="@+id/tv_confirm"
+                        android:layout_width="wrap_content"
+                        android:textSize="16sp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:textColor="@color/white"
+                        android:layout_marginRight="16dp"
+                        android:text="确定"
+                        android:layout_height="wrap_content"/>
+            </RelativeLayout>
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_height="0dp"/>
+
+
+</LinearLayout>
